namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-civil-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-ccms-civil-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-pui-support"
    cloud-platform.justice.gov.uk/application: "Modernised PUI"
    cloud-platform.justice.gov.uk/owner: "PUI Modernisation: laaccmspuimodernisation@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccms-caab"
    cloud-platform.justice.gov.uk/team-name: "laa-ccms-devs"
    cloud-platform.justice.gov.uk/review-after: ""
